--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,9 +5,55 @@ on:
     branches:
       - 'feature/*'
       - 'hotfix/*'
+  workflow_dispatch: # Добавляем триггер для ручного или программного запуска
 
 jobs:
+  create-pr:
+    runs-on: ubuntu-latest
+    outputs:
+      pr_number: ${{ steps.create-pr.outputs.pr_number }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Создаем Pull Request в ветку develop
+      - name: Create Pull Request to develop
+        id: create-pr
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const branch = context.ref.replace('refs/heads/', '');
+            const pulls = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              head: `${context.repo.owner}:${branch}`,
+              base: 'develop'
+            });
+            let pullNumber;
+            if (pulls.data.length === 0) {
+              const response = await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: `Merge ${branch} into develop`,
+                head: branch,
+                base: 'develop',
+                body: 'Automatically created by CI/CD pipeline.'
+              });
+              pullNumber = response.data.number;
+              console.log(`Pull Request created: #${pullNumber}`);
+            } else {
+              pullNumber = pulls.data[0].number;
+              console.log(`Pull Request already exists: #${pullNumber}`);
+            }
+            // Устанавливаем номер PR как output
+            return pullNumber;
+        outputs:
+          pr_number: ${{ steps.create-pr.outputs.result }}
+
   test-and-notify:
+    needs: create-pr
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -31,7 +77,6 @@ jobs:
         run: npm install
         working-directory: ./frontend
 
-      # Запускаем Jest с выводом отчёта в JSON
       - name: Run Jest tests
         id: frontend-tests
         run: npx jest --json --outputFile=jest-results.json --verbose
@@ -44,26 +89,17 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const branch = context.ref.replace('refs/heads/', '');
-            const pulls = await github.rest.pulls.list({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              head: `${context.repo.owner}:${branch}`
-            });
-            if (pulls.data.length > 0) {
-              const pullNumber = pulls.data[0].number;
+            const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
+            if (pullNumber) {
               await github.rest.issues.addLabels({
                 issue_number: pullNumber,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 labels: ["test-passed"]
               });
-            } else {
-              console.log("No open pull request found for branch:", branch);
             }
 
-      # Отправляем отдельное уведомление в Telegram для каждого теста
+      # Отправляем уведомления в Telegram для каждого теста
       - name: Send individual Telegram notifications for frontend tests
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
@@ -80,8 +116,6 @@ jobs:
                 -d text="$(echo -e "$MESSAGE")" \
                 -d parse_mode="HTML"
             done
-          else
-            echo "jest-results.json not found."
           fi
         working-directory: ./frontend
         shell: bash
@@ -104,13 +138,12 @@ jobs:
         working-directory: ./backend
         continue-on-error: true
 
-      # Определяем общий статус тестирования и формируем итоговое сообщение
+      # Определяем общий статус тестирования
       - name: Determine test status
         id: test-status
         run: |
           FRONTEND_STATUS="${{ steps.frontend-tests.outcome }}"
           BACKEND_STATUS="${{ steps.backend-tests.outcome }}"
-          
           if [[ "$FRONTEND_STATUS" == "success" && "$BACKEND_STATUS" == "success" ]]; then
             echo "MESSAGE=✅ All tests passed successfully!%0ABranch: ${{ github.ref_name }}%0ACommit: ${{ github.sha }}%0AVersion: ${{ env.VERSION }}" >> $GITHUB_ENV
             echo "STATUS=success" >> $GITHUB_ENV
@@ -133,7 +166,7 @@ jobs:
             -d parse_mode="HTML"
         shell: bash
 
-      # Отправляем итоговое уведомление по электронной почте
+      # Отправляем итоговое уведомление по email
       - name: Send email with test results
         uses: dawidd6/action-send-mail@v3
         with:
@@ -152,6 +185,33 @@ jobs:
     outputs:
       test_status: ${{ env.STATUS }}
       version: ${{ env.VERSION }}
+
+  auto-merge:
+    needs: [create-pr, test-and-notify]
+    runs-on: ubuntu-latest
+    if: needs.test-and-notify.outputs.test_status == 'success'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Автоматический мердж PR в develop
+      - name: Merge Pull Request
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
+            if (pullNumber) {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pullNumber,
+                merge_method: 'merge'
+              });
+              console.log(`Pull Request #${pullNumber} merged successfully.`);
+            } else {
+              console.log("No pull request number available to merge.");
+            }
 
   sonar-analysis:
     needs: test-and-notify
