--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'feature/*'
       - 'hotfix/*'
-  workflow_dispatch: # Добавляем триггер для ручного или программного запуска
+  workflow_dispatch:
 
 jobs:
   create-pr:
@@ -23,43 +23,25 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const branch = context.ref.replace('refs/heads/', '');
-            let pullNumber;
-            // Проверяем, существует ли уже открытый PR для этой ветки
-            let pulls = await github.rest.pulls.list({
+            const pulls = await github.rest.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
               head: `${context.repo.owner}:${branch}`,
               base: 'develop'
             });
+            let pullNumber;
             if (pulls.data.length === 0) {
-              try {
-                const response = await github.rest.pulls.create({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  title: `Merge ${branch} into develop`,
-                  head: branch,
-                  base: 'develop',
-                  body: 'Automatically created by CI/CD pipeline.'
-                });
-                pullNumber = response.data.number;
-                console.log(`Pull Request created: #${pullNumber}`);
-              } catch (error) {
-                if (error.message.includes("A pull request already exists")) {
-                  // Если PR уже существует, получаем его номер
-                  pulls = await github.rest.pulls.list({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    state: 'open',
-                    head: `${context.repo.owner}:${branch}`,
-                    base: 'develop'
-                  });
-                  pullNumber = pulls.data[0].number;
-                  console.log(`Pull Request already exists: #${pullNumber}`);
-                } else {
-                  throw error;
-                }
-              }
+              const response = await github.rest.pulls.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: `Merge ${branch} into develop`,
+                head: branch,
+                base: 'develop',
+                body: 'Automatically created by CI/CD pipeline.'
+              });
+              pullNumber = response.data.number;
+              console.log(`Pull Request created: #${pullNumber}`);
             } else {
               pullNumber = pulls.data[0].number;
               console.log(`Pull Request already exists: #${pullNumber}`);
@@ -73,7 +55,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Чтение версии из файла
       - name: Get version
         id: version
         run: |
@@ -81,7 +62,6 @@ jobs:
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
           echo "::set-output name=version::${VERSION}"
 
-      # Настройка и тестирование фронтенда
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -97,7 +77,6 @@ jobs:
         working-directory: ./frontend
         continue-on-error: true
 
-      # Добавление метки "test-passed"
       - name: Add label "test-passed"
         uses: actions/github-script@v6
         with:
@@ -113,7 +92,6 @@ jobs:
               });
             }
 
-      # Отправка уведомлений в Telegram по каждому тесту
       - name: Send individual Telegram notifications for frontend tests
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
@@ -134,7 +112,6 @@ jobs:
         working-directory: ./frontend
         shell: bash
 
-      # Настройка и тестирование бэкенда
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -152,7 +129,6 @@ jobs:
         working-directory: ./backend
         continue-on-error: true
 
-      # Определение общего статуса тестирования
       - name: Determine test status
         id: test-status
         run: |
@@ -167,7 +143,6 @@ jobs:
           fi
         shell: bash
 
-      # Итоговое уведомление в Telegram
       - name: Send Telegram final notification
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
@@ -180,7 +155,6 @@ jobs:
             -d parse_mode="HTML"
         shell: bash
 
-      # Отправка итогового уведомления по email
       - name: Send email with test results
         uses: dawidd6/action-send-mail@v3
         with:
@@ -201,14 +175,29 @@ jobs:
       version: ${{ env.VERSION }}
 
   auto-merge:
-    needs: [create-pr, test-and-notify, sonar-analysis]
+    needs: [create-pr, test-and-notify]
     runs-on: ubuntu-latest
     if: needs.test-and-notify.outputs.test_status == 'success'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      # Автоматический мердж PR в develop с проверкой mergeable
+      - name: Setup Git
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+      - name: Merge Pull Request with Conflict Resolution
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git fetch origin develop
+          git checkout ${{ github.ref_name }}
+          git merge -X theirs origin/develop
+          git push origin ${{ github.ref_name }}
+
       - name: Merge Pull Request
         uses: actions/github-script@v6
         with:
@@ -216,23 +205,13 @@ jobs:
           script: |
             const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
             if (pullNumber) {
-              // Получаем данные PR, чтобы проверить, можно ли его смержить
-              const { data: pr } = await github.rest.pulls.get({
+              await github.rest.pulls.merge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: pullNumber,
+                merge_method: 'merge'
               });
-              if (pr.mergeable) {
-                await github.rest.pulls.merge({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  pull_number: pullNumber,
-                  merge_method: 'merge'
-                });
-                console.log(`Pull Request #${pullNumber} merged successfully.`);
-              } else {
-                console.log(`Pull Request #${pullNumber} is not mergeable.`);
-              }
+              console.log(`Pull Request #${pullNumber} merged successfully.`);
             } else {
               console.log("No pull request number available to merge.");
             }
