--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -196,16 +196,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          # Получаем последние изменения из develop и целевой ветки
-          git fetch origin develop
-          git fetch origin ${{ github.ref_name }}
+          # Обновляем локальную копию и переходим на целевую ветку
+          git fetch origin
           git checkout ${{ github.ref_name }}
-          # Сливаем изменения из develop, предпочитая их при конфликте
-          git merge origin/develop -X theirs -m "Auto-merge conflict resolution"
-          # Обновляем локальную ветку, ребейзясь на последний коммит удалённой ветки
-          git rebase origin/${{ github.ref_name }} || true
-          # Пушим изменения принудительно
-          git push origin HEAD --force
+          git pull origin ${{ github.ref_name }} --ff-only
+      
+          # Сливаем изменения из develop, принимая их при конфликте
+          git fetch origin develop
+          git merge origin/develop -X theirs -m "Auto-merge conflict resolution" || true
+      
+          # Пушим изменения с полным указанием refspec
+          git push origin HEAD:refs/heads/${{ github.ref_name }} --force-with-lease
 
       - name: Merge Pull Request via API
         uses: actions/github-script@v6
