--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -180,27 +180,26 @@ jobs:
     if: needs.test-and-notify.outputs.test_status == 'success'
     permissions:
       contents: write
-      pull-requests: write  # Added explicit permission for PR operations
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # Use PAT_TOKEN for checkout to ensure proper authentication
           token: ${{ secrets.PAT_TOKEN }}
   
       - name: Setup Git
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          # Authenticate git with PAT_TOKEN
-          git config --global credential.helper 'cache --timeout=3600'
-          echo "https://${{ secrets.PAT_TOKEN }}:x-oauth-basic@github.com" | git credential approve
   
       - name: Merge Pull Request with Conflict Resolution
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
+          # Set the remote URL with PAT_TOKEN for authentication
+          git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
+  
           # Ensure we're on the feature/hotfix branch
           git fetch origin
           git checkout ${{ github.ref_name }}
@@ -215,13 +214,12 @@ jobs:
             git commit -m "Resolved merge conflicts automatically with 'theirs' strategy"
           }
   
-          # Push changes back to the branch using PAT_TOKEN
+          # Push changes back to the branch
           git push origin HEAD:refs/heads/${{ github.ref_name }} --force-with-lease
   
       - name: Merge Pull Request via API
         uses: actions/github-script@v6
         with:
-          # Use PAT_TOKEN instead of GITHUB_TOKEN
           github-token: ${{ secrets.PAT_TOKEN }}
           script: |
             const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
