--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -193,54 +193,77 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
   
-      - name: Merge Pull Request with Conflict Resolution
+      - name: Force Merge Feature Branch into Develop Locally
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           # Set the remote URL with PAT_TOKEN for authentication
           git remote set-url origin https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
   
-          # Ensure we're on the feature/hotfix branch
+          # Fetch all branches
           git fetch origin
+  
+          # Checkout the feature branch
           git checkout ${{ github.ref_name }}
+  
+          # Pull latest changes from the feature branch
           git pull origin ${{ github.ref_name }} --ff-only
   
-          # Fetch and merge develop, resolving conflicts with 'theirs' strategy
-          git fetch origin develop
-          git merge origin/develop -X theirs -m "Auto-merge conflict resolution with develop" || {
-            echo "Conflict detected, resolving with 'theirs' strategy"
-            git checkout --theirs .
+          # Checkout develop branch
+          git checkout develop
+  
+          # Pull latest develop to ensure we're up-to-date
+          git pull origin develop --ff-only
+  
+          # Force merge the feature branch into develop, overwriting conflicts with feature branch changes
+          git merge ${{ github.ref_name }} -X ours --allow-unrelated-histories -m "Force merge ${{ github.ref_name }} into develop" || {
+            echo "Conflicts detected, forcing feature branch changes over develop"
+            git checkout --ours .
             git add .
-            git commit -m "Resolved merge conflicts automatically with 'theirs' strategy"
+            git commit -m "Force resolved conflicts in favor of ${{ github.ref_name }}"
           }
   
-          # Push changes back to the branch
-          git push origin HEAD:refs/heads/${{ github.ref_name }} --force-with-lease
+          # Force push the updated develop branch
+          git push origin develop --force
   
-      - name: Merge Pull Request via API
+      - name: Update and Merge Pull Request via API with Force
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.PAT_TOKEN }}
           script: |
             const pullNumber = "${{ needs.create-pr.outputs.pr_number }}";
-            if (pullNumber) {
-              try {
-                const response = await github.rest.pulls.merge({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  pull_number: Number(pullNumber),
-                  merge_method: 'merge',
-                  commit_title: `Auto-merge PR #${pullNumber} into develop`,
-                  commit_message: 'Automated merge by CI/CD pipeline'
-                });
-                console.log(`Pull Request #${pullNumber} merged successfully: ${response.data.sha}`);
-              } catch (error) {
-                console.error(`Failed to merge PR #${pullNumber}: ${error.message}`);
-                process.exit(1);
-              }
-            } else {
+            if (!pullNumber) {
               console.log("No pull request number available to merge.");
               process.exit(1);
+            }
+  
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const prNumber = Number(pullNumber);
+  
+            // Check PR state for logging purposes
+            const { data: pr } = await github.rest.pulls.get({
+              owner,
+              repo,
+              pull_number: prNumber
+            });
+            console.log(`PR #${prNumber} mergeable state: ${pr.mergeable_state}`);
+  
+            // Force merge the PR into develop, overwriting base branch if needed
+            try {
+              const response = await github.rest.pulls.merge({
+                owner,
+                repo,
+                pull_number: prNumber,
+                merge_method: 'merge', // Could use 'rebase' or 'squash' if preferred
+                commit_title: `Force merge PR #${prNumber} into develop`,
+                commit_message: 'Force merged by CI/CD pipeline, overwriting develop with feature branch changes'
+              });
+              console.log(`Pull Request #${prNumber} force merged successfully: ${response.data.sha}`);
+            } catch (error) {
+              console.error(`Failed to force merge PR #${prNumber}: ${error.message}`);
+              // If API merge fails (e.g., due to branch protection), log and proceed since local force push already updated develop
+              console.log("Falling back to local force push result.");
             }
 
   sonar-analysis:
